--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -75,7 +75,7 @@
 			}
 			else
 			{
-
+				$("#messBox").append("<li style='font-weight:bold;color:"+data.color+"'><div class='rightside-right-chat'><span><i class='fa fa-circle' aria-hidden='true'></i> "+data.username+"<small> "+data.date+"</small> </span><br><br><p>"+data.mess+"</p></div></li>");
 			}
 		});
 
