--- a/public/style.css
+++ b/public/style.css
@@ -78,4 +78,19 @@
   border-radius: 50%;
 }
 
+.blink{
+
+    font-size: 25px;
+    font-family: 'Lobster', cursive;
+    color: red;
+    animation: blink 2s linear infinite;
+    text-align: center;
+  }
+ 
+@keyframes blink{
+0%{opacity: 0;}
+50%{opacity: .5;}
+100%{opacity: 1;}
+}
+  
 
